# btw

./: .gitignore  Makefile  README.md  archspec.py  bundle_project.sh  project_bundle.txt  pyproject.toml  vistor_vs_listener.md
examples/: bad.arch  bad_semantic.arch  dev_rig.arch
src/archspec/: code_generator.py  parser_handler.py  semantic_analyzer.py
src/archspec/ast/: __init__.py
src/grammar/: ArchLexer.g4  ArchParser.g4
