[project]
name = "btw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "antlr4-tools>=0.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
exclude = [
    "src/grammar/*",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
